tests/custom/streamlining/mset_01/stderr.expected
Error:
    test.essence:3:31:
unexpected of
expecting (, bool, function, int, matrix, mset, partition, record, relation, sequence, set, tuple, or variant
    find a : mset (maxOccur 2) of of int(1..10)
                                  ^
